// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer.NavigationLink /> spec renders the base variant 1`] = `
<DocumentFragment>
  <a
    class="item base"
  >
    <span>
      Link
    </span>
  </a>
</DocumentFragment>
`;

exports[`<Footer.NavigationLink /> spec renders the component 1`] = `
<DocumentFragment>
  <footer
    class="footer koros-basic theme-light"
  >
    <div
      class="koros basic koros basic"
    >
      <svg
        aria-hidden="true"
        height="85"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <pattern
            height="85"
            id="koros_basic-1"
            patternUnits="userSpaceOnUse"
            width="106"
            x="0"
            y="0"
          >
            <path
              d="M0,800h20V0c-4.9,0-5,2.6-9.9,2.6S5,0,0,0V800z"
              transform="scale(5.3)"
            />
          </pattern>
        </defs>
        <rect
          fill="url(#koros_basic-1)"
          height="85"
          width="100%"
        />
      </svg>
    </div>
    <div
      class="footerContent"
    >
      <section
        class="navigationContainer centeredNavigation"
      >
        <div
          class="titleWrapper"
        >
          <h2
            class="title"
          >
            Bar
          </h2>
        </div>
      </section>
      <a
        class="item"
      >
        <span>
          Link
        </span>
      </a>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`<Footer.NavigationLink /> spec renders the navigation variant 1`] = `
<DocumentFragment>
  <a
    class="item navigation"
  >
    <span>
      Link
    </span>
  </a>
</DocumentFragment>
`;

exports[`<Footer.NavigationLink /> spec renders the utility variant 1`] = `
<DocumentFragment>
  <a
    class="item utility"
  >
    <span>
      Link
    </span>
  </a>
</DocumentFragment>
`;
